tests/expectations/compiler/statements/assign_ternary.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected type `bool` but type `u32` was found.
    --> compiler-test:5:30
     |
   5 |         let x: bool = true ? x: true;
     |                              ^
Error [ETYC0372118]: Received different types `u32` and `bool` for the arms of a ternary conditional.
    --> compiler-test:5:23
     |
   5 |         let x: bool = true ? x: true;
     |                       ^^^^^^^^^^^^^^
     |
     = Make both branches the same type.
Error [EAST0372009]: variable `x` shadowed by
    --> compiler-test:5:13
     |
   5 |         let x: bool = true ? x: true;
     |             ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
